<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.rafaelalbergaria</groupId>
	<artifactId>Jms2_0Exemple</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>jar</packaging>


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
		<weblogic.jar.path>C:\Ambiente\java\as\wls12213\wlserver\server\lib\weblogic.jar</weblogic.jar.path>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.jboss.arquillian</groupId>
				<artifactId>arquillian-bom</artifactId>
				<version>1.3.0.Final</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
			<dependency>
				<groupId>org.jboss.shrinkwrap.resolver</groupId>
				<artifactId>shrinkwrap-resolver-bom</artifactId>
				<version>3.1.3</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>org.jboss.arquillian.container</groupId>
			<artifactId>arquillian-wls-embedded-12.1</artifactId>
			<version>1.0.1.Final</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<version>8.0</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.junit</groupId>
			<artifactId>arquillian-junit-container</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.shrinkwrap.resolver</groupId>
			<artifactId>shrinkwrap-resolver-depchain</artifactId>
			<type>pom</type>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
			<testResource>
				<directory>src/test/resources-glassfish-embedded</directory>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<skip>false</skip>
					<!-- 80M is the default size of the permanent generation. Insufficient 
						for embedded WLS 12c -->
					<argLine>-XX:MaxPermSize=128M</argLine>
					<!-- Disable assertions otherwise an assertionerror involving the WLS 
						management runtime is thrown -->
					<enableAssertions>false</enableAssertions>
					<!-- Add the weblogic.jar to the classpath. Contains the embedded EJB 
						SPI provider implementation in it's manifest classpath -->
					<additionalClasspathElements>
						<additionalClasspathElement>${weblogic.jar.path}</additionalClasspathElement>
					</additionalClasspathElements>
					<!-- Exclude the JEE 6 APIs since they do not have method bodies -->
					<classpathDependencyExcludes>
						<classpathDependencyExcludes>javax:javaee-api</classpathDependencyExcludes>
					</classpathDependencyExcludes>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>